--- a/server/package.json
+++ b/server/package.json
@@ -16,6 +16,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "nodemon": "^3.1.4",
+    "openai": "^4.79.1",
     "ts-node": "^10.9.2",
     "typescript": "^5.5.4",
     "zod": "^3.24.1"
