Added initial sert results fetching mechanisms. Added chaching and logging.

--- a/server/.gitignore
+++ b/server/.gitignore
@@ -23,8 +23,9 @@ coverage/
 # Optional npm cache directory
 .npm
 
-# Optional eslint cache
+# Caches
 .eslintcache
+cache/
 
 # VS Code directory
 .vscode/
