--- a/server/package.json
+++ b/server/package.json
@@ -16,6 +16,7 @@
     "bcryptjs": "^2.4.3",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "googleapis": "^144.0.0",
     "nodemon": "^3.1.4",
     "openai": "^4.79.1",
     "ts-node": "^10.9.2",
