--- a/server/package.json
+++ b/server/package.json
@@ -12,13 +12,20 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@mozilla/readability": "^0.5.0",
     "@prisma/client": "^6.2.1",
     "bcryptjs": "^2.4.3",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "googleapis": "^144.0.0",
+    "jsdom": "^26.0.0",
+    "node-html-markdown": "^1.3.0",
     "nodemon": "^3.1.4",
     "openai": "^4.79.1",
+    "puppeteer": "^24.2.1",
+    "puppeteer-cluster": "^0.24.0",
+    "puppeteer-extra": "^3.3.6",
+    "puppeteer-extra-plugin-stealth": "^2.11.2",
     "ts-node": "^10.9.2",
     "typescript": "^5.5.4",
     "zod": "^3.24.1"
@@ -26,6 +33,7 @@
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
     "@types/express": "^4.17.21",
+    "@types/jsdom": "^21.1.7",
     "@types/node": "^22.0.0",
     "prisma": "^6.2.1",
     "tsconfig-paths": "^4.2.0"
